<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We Will help you to find your way!</string>
    <string name="powered_by">Powered by Mukul Joshi</string>


    <!--    String for on boarding screen-->

    <!--  Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--    Description-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. we will display specific or all related shops to match your search</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps</string>
    <string name="fourth_slide_desc">We will handle everything for you.As you have the app in your pocket then you don\'t  have to worry about anything</string>

    <!--    Buttons-->

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


    <!--    dashborad string-->

    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="education">Education</string>

    <!--    title and description-->

    <string name="featured_location">All Featured Locations</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_location">Most Viewed</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="location">Location</string>


    <!--    general string-->

    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>

    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tal_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_acc">Create Account</string>


    <!--    general menu names-->


    <!--    OTP screen -->

    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_code">Verification</string>
    <string name="otp_description">Enter one time password sent on\n+923332225522</string>
    <string name="provide_your_account">Provide your account\'s email for which you want to reset your password!</string>
    <string name="mack_selection">Mack\nSelection</string>
    <string name="mack_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="via_sms">via sms:</string>
    <string name="via_email">via email:</string>
    <string name="new_ncredentials">New\nCredentials</string>

    <string name="new_ncredentials_detail">Your identity has been verified!\nset you new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_update_success_message">Your password has been updated</string>


</resources>