<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/menu_dashboard_icon"/>
        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/search_icon"/>
        <item
            android:id="@+id/nev_all_categories"
            android:title="@string/categories"
            android:icon="@drawable/menu_category_icon"/>
        <item
            android:id="@+id/nav_location"
            android:title="@string/location"
            android:icon="@drawable/menu_location_icon"/>

    </group>


    <item
        android:title="Profile">

        <menu>

            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:title="Login"
                    android:icon="@drawable/menu_login_icon"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="Profile"
                    android:icon="@drawable/menu_profile_icon"/>
                <item
                    android:id="@+id/nev_logout"
                    android:title="Logout"
                    android:icon="@drawable/menu_logout_icon"/>

            </group>


        </menu>

    </item>

    <item
        android:title="Categories">

        <menu>

            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_restaurant"
                    android:title="Restaurant"
                    android:icon="@drawable/restaurant_icon"/>
                <item
                    android:id="@+id/nav_bank"
                    android:title="Bank"
                    android:icon="@drawable/menu_bank_icon"/>
                <item
                    android:id="@+id/nev_education"
                    android:title="Education"
                    android:icon="@drawable/education_icon"/>
                <item
                    android:id="@+id/nev_shop"
                    android:title="Shops"
                    android:icon="@drawable/icon_shop"/>

            </group>


        </menu>

    </item>

    <item
        android:title="Share">

        <menu>

            <group>

                <item
                    android:id="@+id/nav_share"
                    android:title="Share"
                    android:icon="@drawable/menu_share_icon"/>
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="Rate Us"
                    android:icon="@drawable/menu_rate_us_icon"/>


            </group>


        </menu>

    </item>


</menu>