<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Comman.LoginSignup.ForgotPasswordSuccessMessageActivity"
    android:background="@color/white"
    android:padding="30dp"
    android:orientation="vertical">

    <ImageView
        android:onClick="back_pressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/general_back_icon"
        app:tint="@color/black"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:layout_marginTop="-50dp"/>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/updatte_password"
            android:layout_margin="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_update_success_message"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center_horizontal" />


        <Button
            android:onClick="goto_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>


    </LinearLayout>


</LinearLayout>